--- a/olcha/src/come/sign-in/signin.css
+++ b/olcha/src/come/sign-in/signin.css
@@ -102,7 +102,7 @@
     height: 30px;
     background-color: #000000;
     top: 236px;
-    left: 130px;
+    left: 110px;
 }
 
 .word-part{
@@ -137,7 +137,7 @@
     height: 30px;
     background-color: #000000;
     top: 309px;
-    left: 130px;
+    left: 110px;
 }
 
 input:-webkit-autofill {
@@ -151,7 +151,7 @@ input:-webkit-autofill {
     position: absolute;
     left: 50%;
     top: 430px;
-    width: 380px;
+    width: 410px;
     height: 50px;
     border-radius: 10px;
     border: 1px solid #D9D9D9;
